FIX: flex wrap footer

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,6 +7,7 @@
 .footer p {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   font-size: 0.9rem;
   color: #e5edf5;
 }
